[package]
name = "converter"
version = "0.1.0"
authors = ["Lee, Jun Seok <lego3410@gmail.com>"]
repository = "https://github.com/2JS/converter"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = "0.23.14"